--- a/3rdparty/jvm/com/twitter/BUILD
+++ b/3rdparty/jvm/com/twitter/BUILD
@@ -6,13 +6,13 @@ java_library(
         "//3rdparty/jvm/io/netty:netty_handler",
         "//3rdparty/jvm/io/netty:netty_handler_proxy",
         "//3rdparty/jvm/io/netty:netty_transport",
-        "//3rdparty/jvm/io/netty:netty_transport_native_epoll",
+        "//3rdparty/jvm/io/netty:netty_transport_native_epoll_jar_linux_x86_64",
         "//3rdparty/jvm/io/netty:netty_transport_native_unix_common",
         "//external:jar/com/twitter/finagle_base_http_2_11",
         ":finagle_netty3_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -43,7 +43,7 @@ scala_import(
         "//external:jar/com/twitter/finagle_core_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -59,7 +59,7 @@ scala_import(
         "//external:jar/com/twitter/finagle_exp_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -72,7 +72,7 @@ java_library(
         "//external:jar/com/twitter/finagle_http2_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -92,7 +92,7 @@ java_library(
         ":util_logging_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -104,7 +104,7 @@ java_library(
         "//external:jar/com/twitter/finagle_init_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -120,7 +120,7 @@ scala_import(
         "//external:jar/com/twitter/finagle_mux_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -155,7 +155,7 @@ java_library(
         "//external:jar/com/twitter/finagle_netty3_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -167,12 +167,12 @@ java_library(
         "//3rdparty/jvm/io/netty:netty_handler",
         "//3rdparty/jvm/io/netty:netty_handler_proxy",
         "//3rdparty/jvm/io/netty:netty_transport",
-        "//3rdparty/jvm/io/netty:netty_transport_native_epoll",
+        "//3rdparty/jvm/io/netty:netty_transport_native_epoll_jar_linux_x86_64",
         "//3rdparty/jvm/io/netty:netty_transport_native_unix_common",
         "//external:jar/com/twitter/finagle_netty4_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -186,7 +186,7 @@ java_library(
         ":finagle_netty4_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -230,7 +230,7 @@ java_library(
         ":scrooge_core_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -245,7 +245,7 @@ java_library(
         "//external:jar/com/twitter/finagle_toggle_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -257,7 +257,7 @@ java_library(
         "//external:jar/com/twitter/finagle_tunable_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -343,7 +343,7 @@ scala_import(
         "//external:jar/com/twitter/finatra_utils_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -403,7 +403,7 @@ scala_import(
         "//external:jar/com/twitter/inject_modules_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -421,7 +421,7 @@ scala_import(
         "//external:jar/com/twitter/inject_server_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -461,7 +461,7 @@ scala_import(
         "//external:jar/com/twitter/inject_utils_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -473,7 +473,7 @@ java_library(
         "//external:jar/com/twitter/scrooge_core_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -502,7 +502,7 @@ scala_import(
         "//external:jar/com/twitter/twitter_server_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -535,7 +535,7 @@ java_library(
         ":util_registry_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -547,7 +547,7 @@ java_library(
         "//external:jar/com/twitter/util_cache_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -559,7 +559,7 @@ java_library(
         "//external:jar/com/twitter/util_codec_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -571,7 +571,7 @@ java_library(
         "//external:jar/com/twitter/util_collection_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -601,7 +601,7 @@ java_library(
         "//external:jar/com/twitter/util_function_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -613,7 +613,7 @@ java_library(
         "//external:jar/com/twitter/util_hashing_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -625,7 +625,7 @@ java_library(
         "//external:jar/com/twitter/util_jvm_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -637,7 +637,7 @@ java_library(
         "//external:jar/com/twitter/util_lint_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -649,7 +649,7 @@ java_library(
         "//external:jar/com/twitter/util_logging_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -661,7 +661,7 @@ java_library(
         "//external:jar/com/twitter/util_registry_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -673,7 +673,7 @@ java_library(
         "//external:jar/com/twitter/util_security_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -685,7 +685,7 @@ java_library(
         "//external:jar/com/twitter/util_slf4j_api_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -697,7 +697,7 @@ java_library(
         "//external:jar/com/twitter/util_slf4j_jul_bridge_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -728,7 +728,7 @@ java_library(
         "//external:jar/com/twitter/util_tunable_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
