--- a/3rdparty/jvm/net/codingwell/BUILD
+++ b/3rdparty/jvm/net/codingwell/BUILD
@@ -6,7 +6,7 @@ java_library(
         "//external:jar/net/codingwell/scala_guice_2_11"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
