--- a/3rdparty/jvm/org/apache/thrift/BUILD
+++ b/3rdparty/jvm/org/apache/thrift/BUILD
@@ -7,7 +7,7 @@ java_library(
         "//external:jar/org/apache/thrift/libthrift"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
