--- a/3rdparty/jvm/org/fusesource/jansi/BUILD
+++ b/3rdparty/jvm/org/fusesource/jansi/BUILD
@@ -1,8 +1,8 @@
 load("@io_bazel_rules_scala//scala:scala_import.bzl", "scala_import")
 java_library(
-    name = "commons_codec",
+    name = "jansi",
     exports = [
-        "//external:jar/commons_codec/commons_codec"
+        "//external:jar/org/fusesource/jansi/jansi"
     ],
     visibility = [
         "//3rdparty/jvm:__subpackages__"
