--- a/3rdparty/jvm/org/hdrhistogram/BUILD
+++ b/3rdparty/jvm/org/hdrhistogram/BUILD
@@ -5,7 +5,7 @@ java_library(
         "//external:jar/org/hdrhistogram/HdrHistogram"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
