--- a/3rdparty/jvm/aopalliance/BUILD
+++ b/3rdparty/jvm/aopalliance/BUILD
@@ -5,7 +5,7 @@ java_library(
         "//external:jar/aopalliance/aopalliance"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
