--- a/3rdparty/jvm/org/apache/httpcomponents/BUILD
+++ b/3rdparty/jvm/org/apache/httpcomponents/BUILD
@@ -8,7 +8,7 @@ java_library(
         ":httpcore"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
@@ -20,7 +20,7 @@ java_library(
         "//external:jar/org/apache/httpcomponents/httpcore"
     ],
     visibility = [
-        "//visibility:public"
+        "//3rdparty/jvm:__subpackages__"
     ]
 )
 
