--- a/3rdparty/dependencies.yml
+++ b/3rdparty/dependencies.yml
@@ -25,36 +25,34 @@ options:
 dependencies:
   com.github.nscala-time:
     nscala-time:
-      version: 2.18.0
+      version: "2.18.0"
       lang: scala
   com.twitter:
     finagle:
-      version: 18.4.0
+      version: "18.11.0"
       lang: scala
       modules: [mysql, stats]
     finatra:
-      version: 18.4.0
+      version: "18.11.0"
       lang: scala
       modules: [http, httpclient, jackson]
     inject:
-      version: 18.4.0
+      version: "18.11.0"
       lang: scala
       modules: [core, app, slf4j]
     util:
-      version: 18.4.0
+      version: "18.11.0"
       lang: scala
       modules: [core, stats]
     twitter-server:
-      version: "18.4.0"
+      version: "18.11.0"
       lang: scala
       modules: [logback-classic]
   ch.qos.logback:
-    logback-classic:
-      version: 1.2.3
+    logback:
+      version: "1.2.3"
       lang: java
-    logback-core:
-      version: 1.2.3
-      lang: java
+      modules: [classic, core]
   io.sentry:
     sentry:
       version: "1.6.4"
