--- a/pdd/java/ucl/pdd/monitoring/BUILD
+++ b/pdd/java/ucl/pdd/monitoring/BUILD
@@ -17,12 +17,19 @@
 package(default_visibility = ["//visibility:public"])
 
 scala_library(
-  name = "logging",
+  name = "monitoring",
   srcs = glob(["*.scala"]),
   deps = [
-    "//3rdparty/jvm/ch/qos/logback:logback_core",
     "//3rdparty/jvm/ch/qos/logback:logback_classic",
     "//3rdparty/jvm/io/sentry:sentry_logback",
+    "//3rdparty/jvm/com/datadoghq:java_dogstatsd_client",
+    "//3rdparty/jvm/com/twitter:util_stats",
+    "//3rdparty/jvm/com/twitter:finagle_stats",
+    "//3rdparty/jvm/com/twitter:inject_core",
     "//3rdparty/jvm/com/twitter:inject_app",
   ],
+  resources = [
+      "logback.xml",
+  ],
+  resource_strip_prefix = "pdd/java/ucl/pdd/monitoring",
 )
