--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,21 @@ services:
 - mysql
 
 cache:
+  yarn: true
   directories:
   - $HOME/.ivy2/cache
   - $HOME/.sbt
+
+before_install:
+- nvm install 0.10
+- nvm use 0.10
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
+- export PATH="$HOME/.yarn/bin:$PATH"
+
+script:
+- yarn install
+- yarn build
+- sbt compile test
 
 before_cache:
 # Cleanup the cached directories to avoid unnecessary cache updates
