--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,11 @@ cache:
   - $HOME/.sbt
 
 before_install:
+# There is no way to have multiple languages at the same time using Travis.
+# Fortunately, nvm is available to install a Node environment.
 - nvm install 10
 - nvm use 10
+# After installing Node, we manually install Yarn.
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
 - export PATH="$HOME/.yarn/bin:$PATH"
 
@@ -45,9 +48,9 @@ before_cache:
 - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 # Push Docker image.
-#deploy:
-#  provider: script
-#  skip_cleanup: true
-#  script: ./bin/travis-deploy.sh
-#  on:
-#    branch: master
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: ./bin/travis-deploy.sh
+  on:
+    branch: master
